# gapandas4

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_v0.6.0.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: README.md  advanced_filters.py  basic_query.py  data_comparison.py  data_export.py  helper_functions.py  simple_syntax.py
gapandas4/: __init__.py  filters.py  gapandas4.py  utils.py
tests/: __init__.py  test_filters.py  test_gapandas4.py  test_utils.py
